# blokli

./: .gitignore  .graphql-schema-linterrc  .graphqlconfig  .markdownlint-cli2.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  METRICS.md  OTLP.md  README.md  TESTING.md  UPDATE.md  check_schema.py  config-docker.toml  deno.json  docker-compose.yml  flake.nix  justfile  rust-toolchain.toml  sbom.json  sgconfig.yml
api/: Cargo.toml  README.md
api/src/: config.rs  conversions.rs  errors.rs  lib.rs  logging.rs  main.rs  metrics.rs  mutation.rs  notifications.rs  query.rs  query_v2.rs  readiness.rs  schema.rs  server.rs  subscription.rs  tls.rs  validation.rs
api/tests/: account_api_integration_test.rs  account_subscription_test.rs  allowance_api_integration_test.rs  balance_api_integration_test.rs  calculate_module_address_api_integration_test.rs  channel_and_chain_api_integration_test.rs  channel_closure_grace_period_test.rs  channel_graph_subscription_test.rs  channel_subscription_test.rs  contract_address_scalar_test.rs  graphql_batch_request_test.rs  graphql_readiness_gate_test.rs  health_api_integration_test.rs  key_binding_fee_subscription_test.rs  mutation_api_integration_test.rs  safe_api_integration_test.rs  safe_subscription_test.rs  safe_transaction_count_api_integration_test.rs  schema_version_routing_test.rs  sse_keepalive_integration_test.rs  ticket_parameters_subscription_test.rs  transaction_count_api_integration_test.rs  transaction_query_integration_test.rs  transaction_subscription_test.rs
api/tests/common/: mod.rs  test_common.rs
api/tests/contracts/: MockSafe.sol
api/tests/snapshots/: safe_api_integration_test__safe_by_chain_key_invalid_address.snap  safe_api_integration_test__safe_by_chain_key_not_found.snap  safe_api_integration_test__safe_by_chain_key_query.snap  safe_api_integration_test__safe_by_chain_key_query_returns_multiple_safes_for_same_owner.snap  safe_api_integration_test__safe_by_chain_key_query_returns_single_safe_for_deprecated_field.snap  safe_api_integration_test__safe_by_registered_node_invalid_address.snap  safe_api_integration_test__safe_by_registered_node_not_found.snap  safe_api_integration_test__safe_by_registered_node_query.snap  safe_api_integration_test__safe_by_selector_chain_key_returns_safes_list_for_single_match.snap  safe_api_integration_test__safe_query.snap  safe_api_integration_test__safe_query_invalid_address_length.snap  safe_api_integration_test__safe_query_invalid_hex_format.snap  safe_api_integration_test__safe_query_not_found.snap  safe_api_integration_test__safes_list_query.snap
blokli-api/: Cargo.toml  README.md  target-api-schema.graphql
blokli-api-types/: Cargo.toml
blokli-api-types/src/: lib.rs
blokli-api/src/: config.rs  conversions.rs  errors.rs  lib.rs  main.rs  query.rs  schema.rs  server.rs  subscription.rs  tls.rs  types.rs  validation.rs
bloklid/: Cargo.toml  README.md  example-config.toml  example-config.yaml
bloklid/src/: args.rs  config.rs  constants.rs  errors.rs  main.rs  network.rs  telemetry.rs  telemetry_common.rs
bloklid/tests/: indexer_startup_test.rs
chain/actions/: Cargo.toml
chain/actions/src/: action_queue.rs  action_state.rs  channels.rs  errors.rs  lib.rs  node.rs  payload.rs  redeem.rs
chain/api/: Cargo.toml
chain/api/src/: config.rs  errors.rs  executors.rs  lib.rs  revert_decoder.rs  rpc_adapter.rs  safe_execution.rs  transaction_executor.rs  transaction_monitor.rs  transaction_policy.rs  transaction_store.rs  transaction_validator.rs
chain/api/tests/: transaction_integration_test.rs
chain/indexer/: Cargo.toml
chain/indexer/src/: block.rs  config.rs  constants.rs  errors.rs  handlers.rs  lib.rs  startup.rs  state.rs  traits.rs  utils.rs
chain/indexer/tests/: INTEGRATION_TEST_REFACTOR.md  indexer_integration_test.rs
chain/types/: Cargo.toml
chain/types/src/: actions.rs  chain_events.rs  channel.rs  constants.rs  errors.rs  lib.rs  utils.rs
client/: Cargo.toml  build.rs  target-api-schema.graphql
client/src/: client.rs  compatibility.rs  errors.rs  lib.rs  queries.rs
client/src/api/: mod.rs
client/src/client/: batch.rs  mod.rs  queries.rs  subscriptions.rs  transactions.rs
client/src/queries/: accounts.rs  channels.rs  info.rs  mod.rs
client/tests/: query_tests.rs  subscription_tests.rs
client/tests/common/: mod.rs
client/tests/snapshots/: query_tests__query_batch_combines_account_queries_into_one_http_call.snap  query_tests__query_native_balance.snap  query_tests__query_token_balance.snap
db/api/: Cargo.toml
db/api/src/: info.rs  lib.rs  logs.rs  protocol.rs
db/core/: Cargo.toml
db/core/src/: accounts.rs  channels.rs  corrupted_channels.rs  db.rs  errors.rs  info.rs  lib.rs  logs.rs  node_safe_registrations.rs  notifications.rs  numeric.rs  safe_contracts.rs  safe_history.rs  safe_redeemed_stats.rs  snapshot.rs  state_queries.rs  version.rs
db/core/tests/: log_batching.rs
db/entity/: Cargo.toml  build.rs  target-db-schema.mmd
db/entity/src/: errors.rs  lib.rs
db/migration/: Cargo.toml
db/migration/src/: lib.rs  m001_create_index_tables.rs  m001_initial_schema.rs  m002_create_index_indices.rs  m002_initial_log_schema.rs  m003_create_log_tables.rs  m003_migrate_v3_safes.rs  m003_safe_history_schema.rs  m004_create_log_indices.rs  m004_safe_redeemed_stat_events.rs  m004_safe_redeemed_stats_rejections.rs  m005_seed_initial_data.rs  m006_create_balance_and_safe_tables.rs  m007_create_performance_indices.rs  m008_add_channel_closure_grace_period.rs  m009_create_account_state_table.rs  m010_create_channel_state_table.rs  m011_alter_account_remove_safe_address.rs  m012_alter_channel_remove_mutable_fields.rs  m021_clear_index_data.rs  (+23 more)
db/sql/: Cargo.toml
helper/: Cargo.toml
helper/src/: main.rs
inspector/: Cargo.toml
inspector/src/: compatibility.rs  main.rs  queries.rs  subscriptions.rs  table.rs
tests/integration/: Cargo.toml  Dockerfile.registry  config-integration-anvil.toml  docker-compose.yml  get_architecture.sh
tx/: Cargo.toml
tx/src/: errors.rs  filter.rs  lib.rs
types/: Cargo.toml
types/src/: lib.rs  tests.rs
(+241 files in other folders)
