[workspace]

resolver = "2"

members = [
  "api",
  "bloklid",
  "chain/api",
  "chain/indexer",
  "chain/rpc",
  "chain/types",
  "client",
  "db/core",
  "db/entity",
  "db/migration",
  "helper",
  "inspector",
  "tests/integration",
  "types",
]

[workspace.dependencies]
alloy-sol-types      = "1.5.7"
anyhow               = "1.0.102"
async-broadcast      = "0.7.2"
async-compression    = "0.4.42"
async-graphql        = { version = "7.2.1", features = ["chrono", "dataloader"] }
async-lock           = "3.4.2"
async-signal         = "0.2.14"
async-stream         = "0.3.6"
async-tar            = "0.6.0"
async-trait          = "0.1.89"
axum                 = { version = "0.8.9", features = ["http2", "ws"] }
backon               = { version = "1.6.0", default-features = false }
base64ct             = "1.8.3"
blokli-api           = { path = "api" }
blokli-api-types     = { path = "types" }
blokli-chain-api     = { path = "chain/api" }
blokli-chain-indexer = { path = "chain/indexer" }
blokli-chain-rpc     = { path = "chain/rpc" }
blokli-chain-types   = { path = "chain/types" }
blokli-client        = { path = "client" }
blokli-db            = { path = "db/core" }
blokli-db-entity     = { path = "db/entity" }
blokli-db-migration  = { path = "db/migration" }
bytes                = "1.11.1"
chrono               = "0.4.44"
clap                 = { version = "4.6.1", features = ["derive", "env", "string"] }
config               = "0.15.22"
cynic                = "3.13.2"
cynic-codegen        = "3.13.2"
dashmap              = "6.1.0"
env_logger           = "0.11.10"
eventsource-client   = { version = "0.17.2", default-features = false }
flagset              = "0.4.7"
futures              = "0.3.32"
futures-time         = "3.1.0"
futures-timer        = "3.0.3"
futures-util         = "0.3.32"
hex                  = "0.4.3"
hex-literal          = "1.1.0"
hopli                = { git = "https://github.com/hoprnet/hopli", branch = "main" }
hopr-async-runtime   = { git = "https://github.com/hoprnet/hoprnet", branch = "master" }
hopr-bindings        = "4.7.3"
hopr-metrics         = { git = "https://github.com/hoprnet/hoprnet", branch = "master" }
hopr-types           = "1.5.4"

http = "1.4.0"
humantime-serde = "1.1.1"
indexmap = "2.14.0"
insta = { version = "1.47.2", features = ["yaml"] }
launchdarkly-sdk-transport = "0.1.1"
lazy_static = "1.5.0"
libc = "0.2.186"
libp2p-identity = { version = "0.2.13", features = [
  "ed25519",
  "peerid",
  "rand",
] }
mockall = "0.14.0"
mockito = "1.7.2"
moka = { version = "0.12.15", features = ["future"] }
multiaddr = "0.18.2"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", default-features = false }
opentelemetry-prometheus-text-exporter = "0.2.1"
opentelemetry_sdk = "0.31.0"
parking_lot = "0.12.5"
pem-rfc7468 = "1.0"
primitive-types = { version = "0.14.0", features = ["serde"] }
rand = "0.10.1" # ignored in renovate, cannot be updated, dependencies reference old ones
regex = "1.12.3"
reqwest = { version = "0.12.28", features = [
  "json",
] } # Keep aligned with hopr-bindings/alloy transport types; reqwest 0.13 splits Http<Client> from Http<ReqwestClient> and breaks chain/api build.
rstest = "0.26.1"
rust-stream-ext-concurrent = "2.0.0"
rustls = { version = "0.23.39", default-features = false, features = ["std"] }
sea-orm = { version = "2.0.0-rc.38", default-features = false, features = [
  "debug-print",
  "macros",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono",
] }
sea-orm-cli = { version = "2.0.0-rc.38", default-features = false, features = [
  "codegen",
  "runtime-tokio-rustls",
] }
sea-orm-migration = { version = "2.0.0-rc.38", default-features = false, features = [
  "cli",
  "sqlx-postgres",
  "with-chrono",
] }
sea-query = { version = "1.0.0-rc.33", default-features = false }
# Keep sea-query aligned with SeaORM RC line to avoid resolver drift.
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.18.0" }
serde_yaml = "0.9.34"
serial_test = "3.4.0"
smart-default = "0.7.1"
sqlx = { version = "0.8.6", default-features = false, features = [
  "postgres",
  "sqlite",
] }
strum = { version = "0.28.0", features = ["derive"] }
sysinfo = "0.38.4"
temp-env = "0.3.6"
tempfile = "3.27.0"
test-log = { version = "0.2.20", features = ["trace"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
  "tracing",
] }
tokio-rustls = { version = "0.26.4", default-features = false, features = [
  "ring",
] }
toml = "1.1.2"
tower = { version = "0.5.3", default-features = false, features = ["util"] }
tower-http = { version = "0.6.8", features = [
  "compression-zstd",
  "cors",
  "trace",
] }
tracing = { version = "0.1.44" }
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23", features = [
  "env-filter",
  "fmt",
  "registry",
  "std",
] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[profile.dev]
panic = "abort"

# this profile focuses on the speed of compilation
[profile.candidate]
codegen-units = 16        # normal release default
inherits      = "release"
lto           = false     # do the smallest amount of link-time optimization
opt-level     = 2
panic         = "abort"
strip         = true

# perform minimal optimizations to prevent stack overflows in large tests
[profile.test]
opt-level = 1

# this profile focuses on the best runtime performance and the smallest binary size
[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = 3
panic         = "abort"
strip         = true

# Workspace-level lints to prevent common issues
[workspace.lints.clippy]
# Prevent lossy numeric casts that can cause data corruption
cast_possible_truncation = "deny"
cast_possible_wrap       = "deny"
cast_sign_loss           = "deny"

# faster insta test runs
[profile.dev.package]
insta.opt-level   = 3
similar.opt-level = 3
