[package]
name = "blokli-api"
version = "0.1.0"
description = "GraphQL API server for HOPR blokli indexer"
authors = ["HOPR Association <tech@hoprnet.org>"]
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.6.2", features = ["cors", "trace", "compression-gzip"] }

# GraphQL
async-graphql = { version = "7.0.14", features = ["chrono", "dataloader"] }
async-graphql-axum = "7.0.14"

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
