[package]
authors     = ["HOPR Association <tech@hoprnet.org>"]
description = "Daemon for indexing HOPR on-chain events and executing HOPR-related on-chain transactions"
edition     = "2024"
homepage    = "https://hoprnet.org/"
license     = "GPL-3.0-only"
name        = "bloklid"
repository  = "https://github.com/hoprnet/hoprnet"
version     = "0.8.1"

[features]
default = ["runtime-tokio"]
runtime-tokio = [
  "blokli-chain-api/runtime-tokio",
  "blokli-chain-indexer/runtime-tokio",
  "blokli-chain-rpc/runtime-tokio",
  "blokli-db/runtime-tokio",
]

[dependencies]
async-channel      = { workspace = true }
async-signal       = { workspace = true }
axum               = { workspace = true }
clap               = { workspace = true }
futures            = { workspace = true }
hex                = { workspace = true }
humantime-serde    = { workspace = true }
sea-orm            = { workspace = true }
serde              = { workspace = true }
serde_with         = { workspace = true }
serde_yaml         = { workspace = true }
smart-default      = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
url                = { workspace = true }
validator          = { workspace = true }

# Local dependencies
blokli-api           = { workspace = true }
blokli-chain-api     = { workspace = true }
blokli-chain-indexer = { workspace = true }
blokli-chain-rpc     = { workspace = true }
blokli-chain-types   = { workspace = true }
blokli-db            = { workspace = true }

# HOPR dependencies
config               = { workspace = true }
hopr-bindings        = { workspace = true }
hopr-crypto-types    = { workspace = true }
hopr-internal-types  = { workspace = true }
hopr-primitive-types = { workspace = true }

# Needed for test deployment, because deploy_for_testing from blokli_chain_types is outdated
# TODO: remove blokli-chain-types completely and only use hopr-chain-types
hopli            = { workspace = true }
hopr-chain-types = { workspace = true }

[dev-dependencies]
anyhow      = { workspace = true }
async-trait = { workspace = true }
mockall     = { workspace = true }
temp-env    = { workspace = true }
tempfile    = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true, features = ["full"] }
validator   = { workspace = true }
