[package]
authors     = ["HOPR Association <tech@hoprnet.org>"]
description = "Daemon for indexing HOPR on-chain events and executing HOPR-related on-chain transactions"
edition     = "2024"
homepage    = "https://hoprnet.org/"
license     = "GPL-3.0-only"
name        = "bloklid"
repository  = "https://github.com/hoprnet/hoprnet"
version     = "0.10.3"

[features]
default = ["runtime-tokio"]
runtime-tokio = [
  "blokli-chain-api/runtime-tokio",
  "blokli-chain-indexer/runtime-tokio",
  "blokli-chain-rpc/runtime-tokio",
  "blokli-db/runtime-tokio",
]
telemetry = ["blokli-api/telemetry"]

[dependencies]
async-signal = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
flagset = { workspace = true }
futures = { workspace = true }
humantime-serde = { workspace = true }
opentelemetry = { workspace = true, features = ["logs", "metrics", "trace"] }
opentelemetry-otlp = { workspace = true, features = [
  "grpc-tonic",
  "http-proto",
  "logs",
  "metrics",
  "reqwest-client",
  "tls-roots",
  "trace",
] }
opentelemetry-prometheus-text-exporter = { workspace = true }
opentelemetry_sdk = { workspace = true, features = [
  "experimental_logs_batch_log_processor_with_async_runtime",
  "experimental_metrics_custom_reader",
  "experimental_metrics_periodicreader_with_async_runtime",
  "experimental_trace_batch_span_processor_with_async_runtime",
  "logs",
  "metrics",
  "rt-tokio",
  "trace",
] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
url = { workspace = true }
validator = { workspace = true }

# Local dependencies
blokli-api           = { workspace = true }
blokli-chain-api     = { workspace = true, features = ["telemetry"] }
blokli-chain-indexer = { workspace = true }
blokli-chain-rpc     = { workspace = true }
blokli-chain-types   = { workspace = true }
blokli-db            = { workspace = true }

# HOPR dependencies
config = { workspace = true }
hopr-bindings = { workspace = true }
hopr-metrics = { workspace = true }
hopr-types = { workspace = true, features = [
  "chain",
  "crypto",
  "internal",
  "primitive",
] }

# Needed for test deployment, because deploy_for_testing from blokli_chain_types is outdated
# TODO: remove blokli-chain-types completely and only use hopr-chain-types
hopli = { workspace = true }

[dev-dependencies]
anyhow      = { workspace = true }
async-trait = { workspace = true }
temp-env    = { workspace = true }
tempfile    = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true, features = ["full"] }
validator   = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["hopli", "humantime-serde"]


[package.metadata.cargo-shear]
ignored = ["humantime-serde"]
