[package]
description = "Client connector to Blokli"
edition     = "2024"
homepage    = "https://hoprnet.org/"
license     = "GPL-3.0-only"
name        = "blokli-client"
repository  = "https://github.com/hoprnet/blokli"
version     = "0.19.0"

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true, optional = true }
async-trait = { workspace = true }
chrono = { workspace = true, optional = true }
cynic = { workspace = true, features = ["http-reqwest"] }
bytes = "1"
eventsource-client = { version = "0.17.0", default-features = false }
futures = { workspace = true }
futures-time = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
http-body-util = "0.1"
indexmap = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
reqwest = { workspace = true, features = [
  "brotli",
  "deflate",
  "gzip",
  "json",
  "zstd",
] }
launchdarkly-sdk-transport = "0.1.0"
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
smart-default = { workspace = true }
thiserror = { workspace = true }
tower-reqwest = "0.6.0-alpha.1"
tracing = { workspace = true, features = ["release_max_level_debug"] }
tower = { workspace = true }
url = { workspace = true }

hopr-crypto-types = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "indexmap/serde"]
testing = [
  "dep:async-broadcast",
  "dep:chrono",
  "dep:hopr-crypto-types",
  "dep:indexmap",
  "dep:parking_lot",
  "dep:rand",
  "serde",
]

[build-dependencies]
cynic-codegen = { workspace = true }

[dev-dependencies]
anyhow      = { workspace = true }
insta       = { workspace = true, features = ["json", "yaml"] }
mockito     = { workspace = true }
parking_lot = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
