[package]
description = "Client connector to Blokli"
edition     = "2024"
homepage    = "https://hoprnet.org/"
license     = "GPL-3.0-only"
name        = "blokli-client"
repository  = "https://github.com/hoprnet/blokli"
version     = "0.27.0"

[dependencies]
anyhow          = { workspace = true }
async-broadcast = { workspace = true, optional = true }
async-trait     = { workspace = true }
bytes           = "1"
chrono          = { workspace = true, optional = true }
cynic           = { workspace = true, features = ["http-reqwest"] }
# Use custom reqwest transport (no built-in hyper transport).
eventsource-client = { workspace = true }
futures = { workspace = true }
futures-time = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
indexmap = { workspace = true, optional = true }
launchdarkly-sdk-transport = { workspace = true }
moka = { workspace = true, features = ["future"] }
parking_lot = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
reqwest = { workspace = true, features = [
  "brotli",
  "deflate",
  "gzip",
  "json",
  "stream",
  "zstd",
] }
semver = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
smart-default = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["release_max_level_debug"] }
url = { workspace = true }

hopr-types = { workspace = true, features = ["crypto", "primitive"] }

[features]
serde = ["dep:serde", "indexmap/serde"]
testing = [
  "dep:async-broadcast",
  "dep:chrono",
  "dep:indexmap",
  "dep:parking_lot",
  "dep:rand",
  "serde",
]

[build-dependencies]
cynic-codegen = { workspace = true }

[dev-dependencies]
anyhow      = { workspace = true }
insta       = { workspace = true, features = ["json", "yaml"] }
mockito     = { workspace = true }
parking_lot = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
