[package]
description = "CLI helper utilities for HOPR Blokli"
edition     = "2024"
homepage    = "https://hoprnet.org/"
license     = "GPL-3.0-only"
name        = "blokli-helper"
repository  = "https://github.com/hoprnet/blokli"
version     = "0.1.0"

[dependencies]
anyhow               = { workspace = true }
blokli-chain-types   = { workspace = true }
clap                 = { workspace = true }
hex                  = { workspace = true }
hopr-bindings        = { workspace = true }
hopr-internal-types  = { workspace = true }
hopr-primitive-types = { workspace = true }

[lints]
workspace = true
