[package]
description = "A tool allowing to inspect running Blokli instances using their GraphQL API"
edition     = "2024"
homepage    = "https://hoprnet.org/"
license     = "GPL-3.0-only"
name        = "blokli-inspector"
repository  = "https://github.com/hoprnet/blokli"
version     = "0.1.0"


[dependencies]
anyhow        = { workspace = true }
blokli-client = { workspace = true }
clap          = { workspace = true }
futures       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
serde_yaml    = { workspace = true }
tokio         = { workspace = true }

[lints]
workspace = true
